# mads-2025-hackathon

./: .gitignore  .lefthook.yml  README.md  main.py  pyproject.toml
src/akte_classifier/: cli.py  trainer.py
src/akte_classifier/datasets/: dataset.py
src/akte_classifier/models/: neural.py  regex.py
src/akte_classifier/utils/: analysis.py  early_stopping.py  evaluation.py  tensor.py
src/kadaster_dataloader/: __init__.py  analysis.py  cli.py  dataset.py  evaluation.py  logging.py  model.py  regex_model.py  trainer.py
src/kadaster_dataloader/datasets/: dataset.py
src/kadaster_dataloader/models/: regex.py  text.py
src/kadaster_dataloader/utils/: analysis.py  evaluation.py  logging.py  tensor.py
tests/: test_cli.py  test_datasets.py  test_models.py  test_trainer.py  test_walkthrough.py
