[project]
name = "kadaster-dataloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "torch>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kadaster_dataloader"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]
