[project]
name = "kadaster-dataloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "torch>=2.9.1",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mlflow>=2.0.0",
    "typer>=0.20.0", # Assuming a reasonable version for typer, as the user provided "typer",>=2.0.0" which is syntactically incorrect. A common recent version is 0.12.3.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kadaster_dataloader"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]
