[project]
name = "akte-classifier"
version = "0.1.0"
description = "A repository for the MADS hackathon to build a text classifier for the kadaster dataset"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "torch>=2.9.1",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mlflow>=2.0.0",
    "typer>=0.20.0",
    "openai>=2.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akte_classifier"]

[project.scripts]
kadaster = "akte_classifier.cli:app"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.14.6",
    "types-seaborn>=0.13.2.20250914",
    "types-tqdm>=4.67.0.20250809",
]
